generiran prvi pdf

--- a/Rad/diplomski.tex
+++ b/Rad/diplomski.tex
@@ -4,13 +4,13 @@
 \begin{document}
 
 % TODO: Navedite broj rada.
-\thesisnumber{000}
+\thesisnumber{2451}
 
 % TODO: Navedite naslov rada.
-\title{Naslov}
+\title{Klasifikacija pokreta ljudskog tijela temeljena na podacima s inercijskih senzora}
 
 % TODO: Navedite vaše ime i prezime.
-\author{Arthur Dent}
+\author{Ivan Trubić}
 
 \maketitle
 
