--- a/Rad/diplomski.tex
+++ b/Rad/diplomski.tex
@@ -25,6 +25,24 @@
 \chapter{Uvod}
 Uvod rada. Nakon uvoda dolaze poglavlja u kojima se obrađuje tema.
 
+\chapter{Razrada}
+
+\section{Bolesti koljena}
+
+\section{Dosadašnja rješenja}
+
+\section{Rješenje koristeći IMU senzore}
+
+\section{Analiza IMU senzora}
+
+\section{Analiza dostupnih baza podataka}
+
+\section{Stvaranje vlastite baze podataka}
+
+\section{Implementacija metode strojnoga učenja}
+
+\section{Rezultati}
+
 \chapter{Zaključak}
 Zaključak.
 
