--- a/Rad/literatura.bib
+++ b/Rad/literatura.bib
@@ -18,3 +18,21 @@
   publisher = 	 {Odjel za matematiku, Sveučilište J.J.\ Strossmayera u Osijeku},
   year = 	 {2002}
 }
+
+@article{surveillance,
+  author          = {Seckiner D Mallett X Maynard P Meuwly D Roux C},
+  title           = {Forensic gait analysis - Morphometric assessment from surveillance footage},
+  journal         = {Forensic science international},
+  volume          = {296},
+  number          = {57-66},
+  year            = {2019}
+}
+
+@article{VR,
+  author          = {Wei Fang Lianyu Zheng Huanjun Deng Hongbo Zhang},
+  title           = {Real-Time Motion Tracking for MobileAugmented/Virtual Reality Using AdaptiveVisual-Inertial Fusion},
+  journal         = {Sensors},
+  volume          = {},
+  number          = {},
+  year            = {2017}
+}
