--- a/Rad/literatura.bib
+++ b/Rad/literatura.bib
@@ -36,3 +36,28 @@
   number          = {},
   year            = {2017}
 }
+
+@mastersthesis{android,
+  author          = {Antonio Bevilacqua Bingquan Huang Rob Argent Brian Caulfield Tahar Kechadi},
+  title           = {Automatic Classification of Knee Rehabilitation Exercises Using a Single Inertial Sensor: a Case Study},
+  school          = {Insight Centre for Data Analytics, University College of Dublin, Ireland},
+  year            = {2018}
+}
+
+@article{exo,
+  author          = {Jun-Young Jung Wonho Heo Hyundae Yang and Hyunsub Park},
+  title           = {A Neural Network-Based Gait Phase Classification Method  Using Sensors Equipped on Lower Limb Exoskeleton Robots },
+  journal         = {Sensors},
+  volume          = {},
+  number          = {},
+  year            = {2015}
+}
+
+@article{LowerLimb,
+  author          = {Vincent Bonnet Vladimir Joukov Dana Kulić Philippe Fraisse Nacim Ramdani and Gentiane Venture},
+  title           = {Monitoring of Hip and Knee Joint Angles Using a Single Inertial Measurement Unit During Lower Limb Rehabilitation},
+  journal         = {Sensors},
+  volume          = {16},
+  number          = {6},
+  year            = {2016}
+}
