--- a/Rad/literatura.bib
+++ b/Rad/literatura.bib
@@ -61,3 +61,20 @@
   number          = {6},
   year            = {2016}
 }
+
+@manual{ICM,
+  title        = {World’s Lowest Power 9-Axis MEMS MotionTracking™ Device},
+  author       = {TDK}
+}
+
+@manual{L3G,
+  title        = {MEMS motion sensor: three-axis digital output gyroscope},
+  author       = {ST}
+}
+
+@misc{mini_data_capture,
+  author       = {Michael Pollind},
+  title        = {Mini Data Capture},
+  howpublished = {Github project},
+  year         = {2018}
+}
